force-app/main/default/objects/Plan_Signal__c/Plan_Signal__c.object-meta.xml
<CustomObject>
    <description>AI / detection signal persisted as a record so it is actionable and reportable (architecture 9). Lookup to plan and/or account.</description>
    <label>Plan Signal</label>
    <nameField>
        <displayFormat>SIG-{0000000}</displayFormat>
        <label>Signal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>