force-app/main/default/objects/Plan_Signal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Plan_Signals</relationshipName>
    <relationshipLabel>Plan Signals</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>