force-app/main/default/objects/Plan_Signal__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <type>Lookup</type>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Signals</relationshipName>
    <relationshipLabel>Signals</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>