force-app/main/default/objects/Plan_Signal__c/fields/Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>Detected_Date__c</fullName>
    <label>Detected Date</label>
    <type>Date</type>
</CustomField>