force-app/main/default/objects/Plan_Signal__c/fields/Linked_Cell__c.field-meta.xml
<CustomField>
    <fullName>Linked_Cell__c</fullName>
    <label>Linked Cell</label>
    <type>Lookup</type>
    <referenceTo>Whitespace_Cell__c</referenceTo>
    <relationshipName>Signals</relationshipName>
    <relationshipLabel>Signals</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>