force-app/main/default/objects/Plan_Signal__c/fields/Linked_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Linked_Stakeholder__c</fullName>
    <label>Linked Stakeholder</label>
    <type>Lookup</type>
    <referenceTo>Plan_Stakeholder__c</referenceTo>
    <relationshipName>Signals</relationshipName>
    <relationshipLabel>Signals</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>