force-app/main/default/objects/Plan_Signal__c/fields/OwnerSig__c.field-meta.xml
<CustomField>
    <fullName>OwnerSig__c</fullName>
    <label>Signal Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Plan_Signals</relationshipName>
    <relationshipLabel>Plan Signals (Owned)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>