force-app/main/default/objects/Plan_Signal__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <description>Surfaced by Einstein next-best-action.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>