force-app/main/default/objects/Plan_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Risk</fullName><default>false</default><label>Risk</label></value>
            <value><fullName>Churn</fullName><default>false</default><label>Churn</label></value>
            <value><fullName>Expansion</fullName><default>false</default><label>Expansion</label></value>
            <value><fullName>Intent</fullName><default>false</default><label>Intent</label></value>
            <value><fullName>Relationship</fullName><default>false</default><label>Relationship</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>