force-app/main/default/objects/Plan_Signal__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>e.g. ZoomInfo, Clay, CPQ, Data Cloud, Einstein, Whitespace_Cell.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>