force-app/main/default/objects/Plan_Signal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Signal_Type__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Summary__c</columns>
    <columns>Detected_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>